set(UNIT_TEST_SOURCE_LIST
    # cmake-format: sortable
    crayg/foundation/areaiterators/TestScanlineIterator.cpp
    crayg/foundation/areaiterators/tiles/TestScanlineSequence.cpp
    crayg/foundation/areaiterators/tiles/TestSpiralSequence.cpp
    crayg/foundation/areaiterators/tiles/TestTileSequence.cpp
    crayg/foundation/areaiterators/tiles/tilequeues/TestFollowMouseTileQueue.cpp
    crayg/foundation/areaiterators/tiles/tilequeues/TestFollowSequenceTileQueue.cpp
    crayg/foundation/areaiterators/tiles/tilequeues/TestTileQueue.cpp
    crayg/foundation/assertions/TestPreconditions.cpp
    crayg/foundation/containers/TestArray2d.cpp
    crayg/foundation/enums/TestEnumParser.cpp
    crayg/foundation/enums/TestValueMapper.cpp
    crayg/foundation/macros/TestForeachVararg.cpp
    crayg/foundation/math/geometry/TestBoundingBox.cpp
    crayg/foundation/math/geometry/TestBounds2d.cpp
    crayg/foundation/math/geometry/TestColor.cpp
    crayg/foundation/math/geometry/TestGradient.cpp
    crayg/foundation/math/geometry/TestMatrix4x4f.cpp
    crayg/foundation/math/geometry/TestOrthonormalBasis.cpp
    crayg/foundation/math/geometry/TestRay.cpp
    crayg/foundation/math/geometry/TestResolution.cpp
    crayg/foundation/math/geometry/TestTransform.cpp
    crayg/foundation/math/geometry/TestVector2.cpp
    crayg/foundation/math/geometry/TestVector3f.cpp
    crayg/foundation/math/TestCommonMath.cpp
    crayg/foundation/math/TestQuadraticEquations.cpp
    crayg/foundation/numerics/TestAtomicFloats.cpp
    crayg/foundation/numerics/TestBitCast.cpp
    crayg/foundation/objects/TestDtoUtils.cpp
    crayg/foundation/objects/TestToStringHelper.cpp
    crayg/foundation/parallel/TestParallelLoops.cpp
    crayg/foundation/parallel/TestThreadCount.cpp
    crayg/foundation/progress/TestRemainingTimeCalculator.cpp
    crayg/foundation/progress/TestStopWatch.cpp
    crayg/foundation/progress/TestTaskReporter.cpp
    crayg/foundation/reporting/TestHeatMap.cpp
    crayg/foundation/strings/TestHumanize.cpp
    crayg/foundation/strings/TestNumberParsing.cpp
    crayg/image/film/buffers/TestFilmAccumulationBuffer.cpp
    crayg/image/film/buffers/TestFilmBufferBase.cpp
    crayg/image/film/buffers/TestFilmBufferFactory.cpp
    crayg/image/film/buffers/TestFilmBufferVariants.cpp
    crayg/image/film/buffers/TestFilmSumBuffer.cpp
    crayg/image/film/buffers/TestFilmValueBuffer.cpp
    crayg/image/film/buffers/TestFilmValueTrait.cpp
    crayg/image/film/TestFilm.cpp
    crayg/image/TestColorConversion.cpp
    crayg/image/TestImage.cpp
    crayg/image/TestImageAlgorithms.cpp
    crayg/image/TestImageChannelPathResolver.cpp
    crayg/image/TestImageIterators.cpp
    crayg/image/TestImageMetadata.cpp
    crayg/image/TestImageTile.cpp
    crayg/image/TestPixelBuffer.cpp
    crayg/imaging/lensio/extendedformat/TestLensFileExtendedFormatReader.cpp
    crayg/imaging/lensio/extendedformat/TestLensFileExtendedFormatWriter.cpp
    crayg/imaging/lensio/json/TestLensFileJsonReader.cpp
    crayg/imaging/lensio/json/TestLensFileJsonWriter.cpp
    crayg/imaging/lensio/TestLensFileReader.cpp
    crayg/imaging/lensio/TestLensFileWriter.cpp
    crayg/imaging/lensio/textfile/TestLensFileTextFileReader.cpp
    crayg/imaging/lensio/textfile/TestLensFileTextFileWriter.cpp
    crayg/imaging/lensio/zmx/TestZMXFileFormatReader.cpp
    crayg/imaging/TestCameraLens.cpp
    crayg/imaging/TestExitPupilCalculator.cpp
    crayg/imaging/TestLensMaterial.cpp
    crayg/imaging/TestLensRaytracerTracer.cpp
    crayg/imaging/TestLensSurface.cpp
    crayg/imaging/TestThickLensApproximation.cpp
    crayg/imaging/TestVariableLensDistances.cpp
    crayg/renderer/integrators/TestDebugIntegrator.cpp
    crayg/renderer/integrators/TestIntegratorSettings.cpp
    crayg/renderer/integrators/TestRaytracingIntegrator.cpp
    crayg/renderer/integrators/TestSurfaceInteraction.cpp
    crayg/renderer/intersectors/embree/TestEmbreeBvhBuilder.cpp
    crayg/renderer/intersectors/embree/TestEmbreeSceneIntersector.cpp
    crayg/renderer/intersectors/embree/TestEmbreeUtils.cpp
    crayg/renderer/TestImageMetadataCollector.cpp
    crayg/renderer/TestSampleAccumulator.cpp
    crayg/renderer/TestTileSizeEstimator.cpp
    crayg/renderer/tilesamplers/TestAdaptiveTileSampler.cpp
    crayg/renderer/tilesamplers/TestUniformTileSampler.cpp
    crayg/scene/camera/TestCamera.cpp
    crayg/scene/io/read/usd/base/TestBaseUsdImageableReader.cpp
    crayg/scene/io/read/usd/base/TestBaseUsdLightReader.cpp
    crayg/scene/io/read/usd/base/TestBaseUsdReader.cpp
    crayg/scene/io/read/usd/base/TestBaseUsdXformableReader.cpp
    crayg/scene/io/read/usd/camera/TestUsdCameraReader.cpp
    crayg/scene/io/read/usd/lights/TestUsdDiskLightReader.cpp
    crayg/scene/io/read/usd/lights/TestUsdRectLightReader.cpp
    crayg/scene/io/read/usd/lights/TestUsdSphereLightReader.cpp
    crayg/scene/io/read/usd/primitives/TestUsdMeshReader.cpp
    crayg/scene/io/read/usd/primitives/TestUsdPointInstancerReader.cpp
    crayg/scene/io/read/usd/primitives/TestUsdSphereReader.cpp
    crayg/scene/io/read/usd/primitives/TestUsdSubdivisionSurfaceMeshReader.cpp
    crayg/scene/io/read/usd/shadingnetworks/caches/TestUsdMaterialReadCache.cpp
    crayg/scene/io/read/usd/shadingnetworks/caches/TestUsdShadingNodeReadCache.cpp
    crayg/scene/io/read/usd/shadingnetworks/materials/TestUsdPreviewSurfaceReader.cpp
    crayg/scene/io/read/usd/shadingnetworks/shadingnodes/TestUsdCheckerBoardReader.cpp
    crayg/scene/io/read/usd/shadingnetworks/shadingnodes/TestUsdColorToFloatReader.cpp
    crayg/scene/io/read/usd/shadingnetworks/shadingnodes/TestUsdConstantShadingNodeReaders.cpp
    crayg/scene/io/read/usd/shadingnetworks/shadingnodes/TestUsdConversionNodesReaders.cpp
    crayg/scene/io/read/usd/shadingnetworks/shadingnodes/TestUsdFileTextureReader.cpp
    crayg/scene/io/read/usd/shadingnetworks/shadingnodes/TestUsdPrimVarReaderReaders.cpp
    crayg/scene/io/read/usd/TestUsdRenderSettingsReader.cpp
    crayg/scene/io/read/usd/TestUsdStageReader.cpp
    crayg/scene/io/TestSceneReaderFactory.cpp
    crayg/scene/io/TestSceneWriterFactory.cpp
    crayg/scene/io/usd/TestUsdConversions.cpp
    crayg/scene/io/usd/TestUsdReadUtils.cpp
    crayg/scene/io/usd/TestUsdUtils.cpp
    crayg/scene/io/write/usd/base/TestBaseUsdLightWriter.cpp
    crayg/scene/io/write/usd/base/TestBaseUsdSceneObjectWriter.cpp
    crayg/scene/io/write/usd/base/TestBaseUsdTransformableWriter.cpp
    crayg/scene/io/write/usd/camera/TestUsdCameraWriter.cpp
    crayg/scene/io/write/usd/lights/TestUsdDiskLightWriter.cpp
    crayg/scene/io/write/usd/lights/TestUsdPointLightWriter.cpp
    crayg/scene/io/write/usd/lights/TestUsdRectLightWriter.cpp
    crayg/scene/io/write/usd/primitives/TestUsdGroundPlaneWriter.cpp
    crayg/scene/io/write/usd/primitives/TestUsdPointInstancerWriter.cpp
    crayg/scene/io/write/usd/primitives/TestUsdSphereWriter.cpp
    crayg/scene/io/write/usd/primitives/TestUsdSubdivisionSurfaceMeshWriter.cpp
    crayg/scene/io/write/usd/primitives/TestUsdTriangleMeshWriter.cpp
    crayg/scene/io/write/usd/shadingnetworks/caches/TestUsdMaterialWriteCache.cpp
    crayg/scene/io/write/usd/shadingnetworks/caches/TestUsdShadingNodeWriteCache.cpp
    crayg/scene/io/write/usd/shadingnetworks/shadingnodes/TestUsdCheckerBoardWriter.cpp
    crayg/scene/io/write/usd/shadingnetworks/shadingnodes/TestUsdColorToFloatWriter.cpp
    crayg/scene/io/write/usd/shadingnetworks/shadingnodes/TestUsdConstantShadingNodeWriters.cpp
    crayg/scene/io/write/usd/shadingnetworks/shadingnodes/TestUsdConversionNodesWriters.cpp
    crayg/scene/io/write/usd/shadingnetworks/shadingnodes/TestUsdFileTextureWriter.cpp
    crayg/scene/io/write/usd/shadingnetworks/shadingnodes/TestUsdPrimVarReaderWriters.cpp
    crayg/scene/io/write/usd/TestUsdPathFactory.cpp
    crayg/scene/io/write/usd/TestUsdRenderSettingsWriter.cpp
    crayg/scene/io/write/usd/TestUsdSceneWriter.cpp
    crayg/scene/lights/shapegenerators/TestDiskLightShapeGenerator.cpp
    crayg/scene/lights/shapegenerators/TestRectLightShapeGenerator.cpp
    crayg/scene/lights/TestAreaLight.cpp
    crayg/scene/lights/TestDiskLight.cpp
    crayg/scene/lights/TestLight.cpp
    crayg/scene/lights/TestRectLight.cpp
    crayg/scene/primitives/subdivisionsurfacemesh/TestFanTriangulator.cpp
    crayg/scene/primitives/subdivisionsurfacemesh/TestOpenSubdivRefiner.cpp
    crayg/scene/primitives/subdivisionsurfacemesh/TestSubdivisionSurfaceMesh.cpp
    crayg/scene/primitives/TestGroundPlane.cpp
    crayg/scene/primitives/TestSphere.cpp
    crayg/scene/primitives/trianglemesh/primvars/TestTriangleMeshPerFacePrimVar.cpp
    crayg/scene/primitives/trianglemesh/primvars/TestTriangleMeshPerPointPrimVar.cpp
    crayg/scene/primitives/trianglemesh/primvars/TestTriangleMeshPerVertexPrimVar.cpp
    crayg/scene/primitives/trianglemesh/TestBarycentricCoordinates.cpp
    crayg/scene/primitives/trianglemesh/TestTriangle.cpp
    crayg/scene/primitives/trianglemesh/TestTriangleMesh.cpp
    crayg/scene/primitives/trianglemesh/TestTriangleMeshConversion.cpp
    crayg/scene/shadingnetworks/materials/TestUsdPreviewSurface.cpp
    crayg/scene/shadingnetworks/shadingnodes/TestCheckerBoard.cpp
    crayg/scene/shadingnetworks/shadingnodes/TestColorToFloat.cpp
    crayg/scene/shadingnetworks/shadingnodes/TestConversionNodes.cpp
    crayg/scene/shadingnetworks/shadingnodes/TestFileTexture.cpp
    crayg/scene/shadingnetworks/TestShadingNode.cpp
    crayg/scene/TestRegionToRender.cpp
    crayg/scene/TestRenderSettings.cpp
    crayg/scene/TestScene.cpp
    fixtures/CameraLensFixtures.cpp
    fixtures/CameraLensFixtures.cpp
    fixtures/CameraLensFixtures.h
    fixtures/PointInstancerFixtures.cpp
    fixtures/PointInstancerFixtures.cpp
    fixtures/PointInstancerFixtures.h
    fixtures/ShadingNodeFixtures.cpp
    fixtures/ShadingNodeFixtures.cpp
    fixtures/ShadingNodeFixtures.h
    fixtures/SubdivisionSurfaceMeshFixtures.cpp
    fixtures/SubdivisionSurfaceMeshFixtures.cpp
    fixtures/SubdivisionSurfaceMeshFixtures.h
    fixtures/TriangleMeshFixtures.cpp
    fixtures/TriangleMeshFixtures.cpp
    fixtures/TriangleMeshFixtures.h
    fixtures/UnitPlaneUvs.h
    fixtures/UsdGeomMeshFixtures.cpp
    fixtures/UsdGeomMeshFixtures.cpp
    fixtures/UsdGeomMeshFixtures.h)

set(TARGET_NAME crayg-unit-tests)

add_executable(${TARGET_NAME} # cmake-format: unsortable
               main.cpp ${UNIT_TEST_SOURCE_LIST})

target_link_libraries(${TARGET_NAME} PUBLIC crayg)
target_include_directories(${TARGET_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

add_test(NAME ${TARGET_NAME} COMMAND ${TARGET_NAME} --durations yes)
